Add NodeSet functionality